Supports the new vsh-into-running-container syntax

It is no longer necessary to use the run_container.sh script every time a
container shell is needed. If the container is already running, vsh now allows
"direct access".

Bug: 848447
Change-Id: Ia9aeb120befd016386816cdd16fb3336b45426ff
Reviewed-on: https://chromium-review.googlesource.com/1082055
Reviewed-by: Timothy Loh <timloh@chromium.org>
Commit-Queue: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563568}
Former-commit-id: e9753dafe05596d1bb5784df2cb99ed7c549302e