chrome/browser/chromeos/crostini/crostini_manager.cc
@@ -744,30 +744,27 @@ void CrostiniManager::LaunchContainerTerminal(
     Profile* profile,
     const std::string& vm_name,
     const std::string& container_name) {
-  std::string container_username = ContainerUserNameForProfile(profile);
   std::string vsh_crosh = base::StringPrintf(
       "chrome-extension://%s/html/crosh.html?command=vmshell",
       kCrostiniCroshBuiltinAppId);
   std::string vm_name_param = net::EscapeQueryParamValue(
       base::StringPrintf("--vm_name=%s", vm_name.c_str()), false);
+  std::string container_name_param = net::EscapeQueryParamValue(
+      base::StringPrintf("--target_container=%s", container_name.c_str()),
+      false);
   std::string owner_id_param = net::EscapeQueryParamValue(
       base::StringPrintf("--owner_id=%s",
                          CryptohomeIdForProfile(profile).c_str()),
       false);
-  std::string lxd_dir =
-      net::EscapeQueryParamValue("LXD_DIR=/mnt/stateful/lxd", false);
-  std::string lxd_conf =
-      net::EscapeQueryParamValue("LXD_CONF=/mnt/stateful/lxd_conf", false);
+
+  std::vector<base::StringPiece> pieces = {
+      vsh_crosh, vm_name_param, container_name_param, owner_id_param};
+
+  GURL vsh_in_crosh_url(base::JoinString(pieces, "&args[]="));
+
   const extensions::Extension* crosh_extension =
       extensions::ExtensionRegistry::Get(profile)->GetInstalledExtension(
           kCrostiniCroshBuiltinAppId);
-
-  std::vector<base::StringPiece> pieces = {
-      vsh_crosh,      vm_name_param, owner_id_param,     "--",
-      lxd_dir,        lxd_conf,      "run_container.sh", "--container_name",
-      container_name, "--user",      container_username, "--shell"};
-
-  GURL vsh_in_crosh_url(base::JoinString(pieces, "&args[]="));
 
   AppLaunchParams launch_params(
       profile, crosh_extension, extensions::LAUNCH_CONTAINER_WINDOW,
